--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -10,9 +10,9 @@
     </head>
  
  <body>
-<!-- {% if user.is_authenticated %}
+{% if user.is_authenticated %}
     <a href="{% url "post_new" %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
-{% endif %} -->
+{% endif %}
     <div class="page-header">
         <a href="{% url "post_new" %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
         <h1><a href="/">Django Girls Blog</a></h1>
